# anvilCLI

./: .envrc  .gitignore  CLAUDE_CODE_SDK_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  colorful_test_palette.json  pyproject.toml
.github/workflows/: ci.yml
anvil/: __init__.py  cache.py  cli.py  repl.py
anvil/commands/: __init__.py  build.py  palette.py  sketch.py
anvil/plugins/: __init__.py  example.py
examples/: claude_build_demo.py  config_demo.py  sketch_demo.py  v0_format_test.py
scripts/: setup_claude_integration.sh
tests/: __init__.py  test_build_command.py  test_cache.py  test_cli.py  test_palette.py  test_plugins.py  test_repl.py
